réplica con put para obtener id de un usuario
