# app_server/routes/users.js
@@ -12,6 +12,7 @@ const { registerHandler, loginHandler, updateUserHandler,  deleteUserHandler, ge
 userRouter.post('/register', validation.registerValidation, registerHandler);
 
 userRouter.get('/register', validation.getUserIdValidation, getUserIdHandler);
+userRouter.put('/userid', validation.getUserIdValidation, getUserIdHandler);
 
 userRouter.put('/register', validation.updateUserValidation, updateUserHandler);
 
